--- a/anywhere2.0/client/package.json
+++ b/anywhere2.0/client/package.json
@@ -39,6 +39,8 @@
     ]
   },
   "devDependencies": {
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.3.5"
   }
 }
