manage user admin side updated

--- a/anywhere2.0/server/package.json
+++ b/anywhere2.0/server/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "sourav",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
