--- a/anywhere2.0/client/package.json
+++ b/anywhere2.0/client/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
   }
 }
