added protected routes file

--- a/anywhere2.0/client/.gitignore
+++ b/anywhere2.0/client/.gitignore
@@ -4,6 +4,10 @@
 /node_modules
 /src/config/tawkto
 /src/config/tawkto.js
+/src/config/ProtectedUrls
+/src/config/ProtectedUrls.js
+
+
 /.pnp
 .pnp.js
 
