--- a/anywhere2.0/client/package.json
+++ b/anywhere2.0/client/package.json
@@ -40,9 +40,9 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.0",
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.9",
-    "tailwindcss": "^3.3.5",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.0"
+    "tailwindcss": "^3.3.5"
   }
 }
