--- a/anywhere2.0/client/package.json
+++ b/anywhere2.0/client/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "tailwindcss-filters": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
